--- a/ClientsApp/Resources/Styles/DefaultTheme.xaml
+++ b/ClientsApp/Resources/Styles/DefaultTheme.xaml
@@ -2,7 +2,7 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:converters="clr-namespace:ClientsApp.Converters">
+    xmlns:converters="clr-namespace:ClientsApp.Utils.Converters">
 
     <!-- Converter -->
     <converters:InverseBoolConverter x:Key="InverseBoolConverter" />
