feat: contexto de acessibilidade

--- a/ClientsApp/Views/ClientDetailPage.xaml
+++ b/ClientsApp/Views/ClientDetailPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodels="clr-namespace:ClientsApp.ViewModels"
+             xmlns:behaviors="clr-namespace:ClientsApp.Utils.Behaviors"
              x:DataType="viewmodels:ClientDetailViewModel"
              x:Class="ClientsApp.Views.ClientDetailPage"
              Title="{Binding Title}"
@@ -27,31 +28,61 @@
 
             <ScrollView>
                 <VerticalStackLayout Spacing="10" Margin="20">
-                    <Label Text="{Binding Title}" Style="{StaticResource CyberpunkLabel}" FontSize="22" HorizontalOptions="Center" Margin="0,0,0,10"/>
+                    <Label Text="{Binding Title}" Style="{StaticResource CyberpunkLabel}"
+                           SemanticProperties.HeadingLevel="Level1"
+                           FontSize="22" HorizontalOptions="Center" Margin="0,0,0,10"/>
 
                     <Label Text="Nome" Style="{StaticResource CyberpunkLabel}" />
                     <Border Style="{StaticResource CyberpunkEntryBorder}">
-                        <Entry Text="{Binding Name}" Placeholder="Nome do cliente" Style="{StaticResource CyberpunkEntry}" />
+                        <Entry Text="{Binding Name}" Placeholder="Nome do cliente"
+                                  SemanticProperties.Description="Campo para o primeiro nome do cliente."
+                               Style="{StaticResource CyberpunkEntry}">
+                            <Entry.Behaviors>
+                                <behaviors:AlphanumericValidationBehavior />
+                            </Entry.Behaviors>
+                        </Entry>
                     </Border>
 
                     <Label Text="Sobrenome" Style="{StaticResource CyberpunkLabel}" />
                     <Border Style="{StaticResource CyberpunkEntryBorder}">
-                        <Entry Text="{Binding LastName}" Placeholder="Sobrenome do cliente" Style="{StaticResource CyberpunkEntry}" />
+                        <Entry Text="{Binding LastName}" Placeholder="Sobrenome do cliente" 
+                               SemanticProperties.Description="Campo para o sobrenome do cliente."
+                               Style="{StaticResource CyberpunkEntry}" >
+                            <Entry.Behaviors>
+                                <behaviors:AlphanumericValidationBehavior />
+                            </Entry.Behaviors>
+                        </Entry>
                     </Border>
 
                     <Label Text="Endereço" Style="{StaticResource CyberpunkLabel}" />
                     <Border Style="{StaticResource CyberpunkEntryBorder}">
-                        <Entry Text="{Binding Address}" Placeholder="Endereço do cliente" Style="{StaticResource CyberpunkEntry}" />
+                        <Entry Text="{Binding Address}" Placeholder="Endereço do cliente" 
+                               SemanticProperties.Description="Campo para o endereço completo do cliente."
+                               Style="{StaticResource CyberpunkEntry}">
+                            <Entry.Behaviors>
+                                <behaviors:AlphanumericValidationBehavior />
+                            </Entry.Behaviors>
+                        </Entry>
                     </Border>
 
                     <Label Text="Idade" Style="{StaticResource CyberpunkLabel}" />
                     <Border Style="{StaticResource CyberpunkEntryBorder}">
-                        <Entry Text="{Binding Age}" Keyboard="Numeric" Placeholder="Idade do cliente" Style="{StaticResource CyberpunkEntry}" />
+                        <Entry Text="{Binding Age}" Keyboard="Numeric" Placeholder="Idade do cliente"
+                               SemanticProperties.Hint="Digite a idade do cliente."
+                               Style="{StaticResource CyberpunkEntry}" >
+                            <Entry.Behaviors>
+                                <behaviors:NumericValidationBehavior />
+                            </Entry.Behaviors>
+                        </Entry>
                     </Border>
 
                     <Grid ColumnDefinitions="*,*" ColumnSpacing="10" Margin="0,20,0,0">
-                        <Button Grid.Column="0" Text="Cancelar" Command="{Binding CancelAsyncCommand}" IsEnabled="{Binding IsNotBusy}" Style="{StaticResource CyberpunkSecondaryButton}" />
-                        <Button Grid.Column="1" Text="Salvar" Command="{Binding SaveClientAsyncCommand}" IsEnabled="{Binding IsNotBusy}" Style="{StaticResource CyberpunkPrimaryButton}" />
+                        <Button Grid.Column="0" Text="Cancelar" Command="{Binding CancelAsyncCommand}"
+                                SemanticProperties.Hint="Salva as informações do cliente e volta para a tela anterior."
+                                IsEnabled="{Binding IsNotBusy}" Style="{StaticResource CyberpunkSecondaryButton}" />
+                        <Button Grid.Column="1" Text="Salvar" Command="{Binding SaveClientAsyncCommand}"
+                                SemanticProperties.Hint="Cancela a operação e volta para a tela anterior sem salvar."
+                                IsEnabled="{Binding IsNotBusy}" Style="{StaticResource CyberpunkPrimaryButton}" />
                     </Grid>
 
                     <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}" HorizontalOptions="Center" VerticalOptions="Center" />
